# datalan_prax

./: .gitignore  Population.csv  README.md  convertcsv.py  crime_data.csv  crime_data.csv.bak  final_gen.py  model.py  ocakavania.txt  parse.py  populationmodel.py  populationparser.py  pyproject.toml  reset.sh  run.sh  server.py
datasets/: Banskobystrický_kraj.csv  Bratislavský_kraj.csv  Košický_kraj.csv  Nitriansky_kraj.csv  Prešovský_kraj.csv  Trenčiansky_kraj.csv  Trnavský_kraj.csv  Žilinský_kraj.csv
json_output/: Banskobystrický_kraj.json  Banskobystrický_kraj_final.json  Bratislavský_kraj.json  Bratislavský_kraj_final.json  Košický_kraj.json  Košický_kraj_final.json  Nitriansky_kraj.json  Nitriansky_kraj_final.json  Prešovský_kraj.json  Prešovský_kraj_final.json  Trenčiansky_kraj.json  Trenčiansky_kraj_final.json  Trnavský_kraj.json  Trnavský_kraj_final.json  Žilinský_kraj.json  Žilinský_kraj_final.json
output/: Banskobystrický_kraj_final.csv  Bratislavský_kraj_final.csv  Košický_kraj_final.csv  Nitriansky_kraj_final.csv  Prešovský_kraj_final.csv  Trenčiansky_kraj_final.csv  Trnavský_kraj_final.csv  Žilinský_kraj_final.csv
population/: Banskobystrický_kraj_statistics.csv  Bratislavský_kraj_statistics.csv  Košický_kraj_statistics.csv  Nitriansky_kraj_statistics.csv  Prešovský_kraj_statistics.csv  Trenčiansky_kraj_statistics.csv  Trnavský_kraj_statistics.csv  Žilinský_kraj_statistics.csv
population_in/: Banskobystrický_kraj_statistics.csv  Bratislavský_kraj_statistics.csv  Košický_kraj_statistics.csv  Nitriansky_kraj_statistics.csv  (+1 more)
results/: Košický_kraj.csv  (+7 more)
